--- a/LogMaker.vcxproj
+++ b/LogMaker.vcxproj
@@ -191,18 +191,20 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CleLogger.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="include\spdlog\logger.h" />
     <ClInclude Include="include\spdlog\spdlog.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="LogDAO.h" />
     <ClInclude Include="LogMaker.h" />
     <ClInclude Include="LogMakerDlg.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="postgresql_sink.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CleLogger.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="LogDAO.cpp" />
     <ClCompile Include="LogMaker.cpp" />
