--- a/LogMaker.vcxproj.filters
+++ b/LogMaker.vcxproj.filters
@@ -42,7 +42,10 @@
     <ClInclude Include="LogDAO.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="postgresql_sink.h">
+    <ClInclude Include="include\spdlog\logger.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CleLogger.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -60,6 +63,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="LogDAO.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CleLogger.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
