--- a/LogMaker.vcxproj.filters
+++ b/LogMaker.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="CleLogger.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\spdlog\sinks\callback_sink1.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LogMaker.cpp">
