--- a/LogMaker.vcxproj
+++ b/LogMaker.vcxproj
@@ -93,13 +93,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>./include;C:\Program Files\master_x64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <AdditionalOptions>/std:c++17 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalIncludeDirectories>./include;C:\QT2\6.4.2\msvc2019_64\include;C:\QT2\6.4.2\msvc2019_64\include\QtWidgets;C:\Program Files\master_x64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalOptions>/std:c++17 /Zc:__cplusplus  /permissive- %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>./lib;C:\Program Files\master_x64\lib;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>pqxxd.lib;libpq.lib;wsock32.lib;ws2_32.lib;Winmm.lib;%(AdditionalDependencies);</AdditionalDependencies>
+      <AdditionalLibraryDirectories>./lib;C:\Program Files\master_x64\lib;C:\QT2\6.4.2\msvc2019_64\lib;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Qt6Cored.lib;Qt6Guid.lib;Qt6Widgetsd.lib;pqxxd.lib;libpq.lib;wsock32.lib;ws2_32.lib;Winmm.lib;%(AdditionalDependencies);</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -169,15 +170,16 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>./include;C:\Program Files\master_x64\include;</AdditionalIncludeDirectories>
-      <AdditionalOptions>/std:c++17 %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalIncludeDirectories>./include;C:\QT2\6.4.2\msvc2019_64\include;C:\QT2\6.4.2\msvc2019_64\include\QtWidgets;C:\Program Files\master_x64\include;</AdditionalIncludeDirectories>
+      <AdditionalOptions>/std:c++17 /Zc:__cplusplus  /permissive- %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>./lib;C:\Program Files\master_x64\lib;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>pqxx.lib;libpq.lib;wsock32.lib;ws2_32.lib;Winmm.lib;%(AdditionalDependencies);</AdditionalDependencies>
+      <AdditionalLibraryDirectories>./lib;C:\Program Files\master_x64\lib;C:\QT2\6.4.2\msvc2019_64\lib;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Qt6Cored.lib;Qt6Guid.lib;Qt6Widgetsd.lib;pqxx.lib;libpq.lib;wsock32.lib;ws2_32.lib;Winmm.lib;%(AdditionalDependencies);</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
